update index file

--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     <meta name="keywords" content="muthoboi, ebook, rokomari">
     <meta name="author" content="Abdul Halim">
     <title>Muthoboi</title>
-    <link rel="icon" href="../dist/images/icon_muthoboi.png" type="image/png" />
-    <link rel="stylesheet" href="../dist/css/app.bundle.css" />
+    <link rel="icon" href="./dist/images/icon_muthoboi.png" type="image/png" />
+    <link rel="stylesheet" href="./dist/css/app.bundle.css" />
 </head>
 <body>
 
     <header id="header-section">
         <section class="header__content">
             <div class="header__content--wrapper">
-                <a href="" class="logo"><img src="../dist/images/logo.png" alt="logo" class="img-fluid" /></a>
+                <a href="" class="logo"><img src="./dist/images/logo.png" alt="logo" class="img-fluid" /></a>
                 <p class="welcome-text">Welcome to MuthoBoi,</p>
                 <h1 class="title">Largest eBook Store in Bangladesh</h1>
                 <p class="text">Collect your favorite eBooks of your favorites Authors, Categories or Publications. You can check some free eBooks for reader experience.</p>
                 <div class="btn__app">
-                    <a href="http://bit.ly/32qGDGl" target="_blank" class="btn btn__app--download"><img src="../dist/images/icon_google_play.png" alt="icon" class="img-fluid mr-1" /> Download Now</a>
+                    <a href="http://bit.ly/32qGDGl" target="_blank" class="btn btn__app--download"><img src="./dist/images/icon_google_play.png" alt="icon" class="img-fluid mr-1" /> Download Now</a>
                 </div>
             </div>
             <div class="header__content--img">
-                <img src="../dist/images/mobile_display.png" alt="logo" class="img-fluid" />
-                <img src="../dist/images/screenshot1.jpg" alt="screenshot" class="img-fluid img-screenshot" />
+                <img src="./dist/images/mobile_display.png" alt="logo" class="img-fluid" />
+                <img src="./dist/images/screenshot1.jpg" alt="screenshot" class="img-fluid img-screenshot" />
             </div>
         </section>
     </header>
@@ -73,7 +73,7 @@
             <section class="main__section--info">
                 <div class="d-flex align-items-center">
                     <div class="img-wrapper">
-                        <img src="../dist/images/mobile_display.png" alt="image" class="img-fluid" />
+                        <img src="./dist/images/mobile_display.png" alt="image" class="img-fluid" />
                         <div id="carouselExampleIndicators" class="carousel slide position-absolute" data-ride="carousel">
                             <ol class="carousel-indicators">
                                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -83,16 +83,16 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="../dist/images/screenshot1.jpg" alt="screenshot" class="img-fluid img-screenshot" />
+                                    <img src="./dist/images/screenshot1.jpg" alt="screenshot" class="img-fluid img-screenshot" />
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../dist/images/screenshot2.jpg" alt="screenshot" class="img-fluid img-screenshot" />
+                                    <img src="./dist/images/screenshot2.jpg" alt="screenshot" class="img-fluid img-screenshot" />
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../dist/images/screenshot3.jpg" alt="screenshot" class="img-fluid img-screenshot" />
+                                    <img src="./dist/images/screenshot3.jpg" alt="screenshot" class="img-fluid img-screenshot" />
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../dist/images/screenshot4.jpg" alt="screenshot" class="img-fluid img-screenshot" />
+                                    <img src="./dist/images/screenshot4.jpg" alt="screenshot" class="img-fluid img-screenshot" />
                                 </div>
                             </div>
                         </div>
@@ -120,9 +120,9 @@
                 <h1 class="title">App Screenshot</h1>
                 <p class="description">From this app, you can purchase eBook very low price comparing with hardcopy Books. Enjoy the MuthoBoi eBook app anywhere like- Travel time, Restaurants, While waiting in Traffic Jam & also the users from abroad, who didn't get books in a short period of time, now can get the eBook form of that book in a moment within a minimal price.</p>
                 <div class="screenshot-wrapper d-flex align-items-center container-fluid">
-                    <img src="../dist/images/screenshot2.jpg" alt="icon" class="img-fluid js--img-basic" />
-                    <img src="../dist/images/screenshot3.jpg" alt="icon" class="img-fluid js--img-basic" />
-                    <img src="../dist/images/mobile_display.png" alt="icon" class="img-fluid special" />
+                    <img src="./dist/images/screenshot2.jpg" alt="icon" class="img-fluid js--img-basic" />
+                    <img src="./dist/images/screenshot3.jpg" alt="icon" class="img-fluid js--img-basic" />
+                    <img src="./dist/images/mobile_display.png" alt="icon" class="img-fluid special" />
                     <div id="carouselExampleIndicators2" class="carousel slide position-absolute" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
@@ -133,24 +133,24 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../dist/images/screenshot1.jpg" alt="screenshot" class="img-fluid js--img-screenshot" />
+                                <img src="./dist/images/screenshot1.jpg" alt="screenshot" class="img-fluid js--img-screenshot" />
                             </div>
                             <div class="carousel-item">
-                                <img src="../dist/images/screenshot2.jpg" alt="screenshot" class="img-fluid js--img-screenshot" />
+                                <img src="./dist/images/screenshot2.jpg" alt="screenshot" class="img-fluid js--img-screenshot" />
                             </div>
                             <div class="carousel-item">
-                                <img src="../dist/images/screenshot3.jpg" alt="screenshot" class="img-fluid js--img-screenshot" />
+                                <img src="./dist/images/screenshot3.jpg" alt="screenshot" class="img-fluid js--img-screenshot" />
                             </div>
                             <div class="carousel-item">
-                                <img src="../dist/images/screenshot4.jpg" alt="screenshot" class="img-fluid js--img-screenshot" />
+                                <img src="./dist/images/screenshot4.jpg" alt="screenshot" class="img-fluid js--img-screenshot" />
                             </div>
                             <div class="carousel-item">
-                                <img src="../dist/images/screenshot5.jpg" alt="screenshot" class="img-fluid js--img-screenshot" />
+                                <img src="./dist/images/screenshot5.jpg" alt="screenshot" class="img-fluid js--img-screenshot" />
                             </div>
                         </div>
                     </div>
-                    <img src="../dist/images/screenshot4.jpg" alt="icon" class="img-fluid js--img-basic" />
-                    <img src="../dist/images/screenshot5.jpg" alt="icon" class="img-fluid js--img-basic" />
+                    <img src="./dist/images/screenshot4.jpg" alt="icon" class="img-fluid js--img-basic" />
+                    <img src="./dist/images/screenshot5.jpg" alt="icon" class="img-fluid js--img-basic" />
                 </div>
             </section>
 
@@ -159,12 +159,12 @@
 
     <footer id="footer-section">
         <div class="footer__section--wrapper text-center">
-            <img src="../dist/images/icon_muthoboi.png" alt="logo" class="img-fluid" />
+            <img src="./dist/images/icon_muthoboi.png" alt="logo" class="img-fluid" />
             <p class="text-muted small pt-2">প্যাকেটে নয়, এখন বই থাকবে পকেটে!</p>
             <div class="action-wrapper d-flex align-items-center">
                 <h1 class="title mr-0">Download Latest Version of the app</h1>
                 <div class="btn__app ml-3">
-                    <a href="http://bit.ly/32qGDGl" target="_blank" class="btn btn__app--download"><img src="../dist/images/icon_google_play.png" alt="icon" class="img-fluid mr-1" /> Download Now</a>
+                    <a href="http://bit.ly/32qGDGl" target="_blank" class="btn btn__app--download"><img src="./dist/images/icon_google_play.png" alt="icon" class="img-fluid mr-1" /> Download Now</a>
                 </div>
             </div>
                 <p class="text-dark mt-4 mr-0 mb-4">admin@muthoboi.com</p>
@@ -173,7 +173,7 @@
         </div>
     </footer>
 
-    <script src="../dist/js/app.bundle.js" defer></script>
+    <script src="./dist/js/app.bundle.js" defer></script>
 
 </body>
 </html>
